# xjar

./: .clang-format  CMakeLists.txt  README.md  build.bat  build.sh
3rd/glad/: CMakeLists.txt  glad.c  glad.h
assets/: plane.materials  plane.mesh  test.materials  test.mesh
misc/: win_powershell.ps1  win_shell.bat
shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  compile.bat  grid.frag  grid.frag.spv  grid.vert  grid.vert.spv  grid_params.h  plane.vert  shadow_depth.frag  shadow_depth.vert  shadow_depth.vert.spv
src/: game_input.h  glfw_gl.h  glfw_platform.cpp  glfw_vk.h  glfw_window.cpp  io.h  material_system.cpp  material_system.h  model_loader.h  pch.h  texture_manager.cpp  texture_manager.h  types.h  window.cpp  window.h  world.cpp  world.h
src/renderer/: camera.h  mesh_feature.h  pipeline.cpp  render_system.cpp  render_system.h  renderer_backend.h  renderer_system.cpp  renderer_system.h  renderer_types.h  resource_types.h  test_feature.h
src/renderer/gl/: opengl_backend.cpp  opengl_backend.h  opengl_mesh.cpp  opengl_mesh.h  opengl_pipeline.cpp  opengl_pipeline.h  opengl_shared.h  opengl_test_feature.cpp  opengl_test_feature.h
src/renderer/vk/: vulkan_backend.cpp  vulkan_backend.h  vulkan_ds.cpp  vulkan_ds.h  vulkan_grid_feature.cpp  vulkan_grid_feature.h  vulkan_model.cpp  vulkan_model.h  vulkan_multimesh_feature.cpp  vulkan_multimesh_feature.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_render_device.cpp  vulkan_render_device.h  vulkan_shadow_technique.cpp  vulkan_shadow_technique.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_test_feature.cpp  vulkan_test_feature.h  vulkan_texture.h
src/tools/: mesh_converter.h
